feat: email verification
- sending verify email to user email
- validatin all field in authentication
- fix user model: unecessary username require and google id require
